--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -31,6 +32,7 @@
     "i18next-http-backend": "^2.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-flow-renderer": "^10.3.12",
