--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^20.1.4",
     "@types/react": "^18.2.6",
+    "@types/react-date-range": "^1.4.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.12",
